Some fixes for IE8, some z-indexes changed (needs more work)

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -117,9 +117,10 @@ body {
       opacity 0.25s ease-in-out,
       top 0.25s ease-in-out
     });
+    display: none\9; // IE8 hack
     height: 100%;
     left: 0;
-    opacity: 0; filter: alpha(opacity=0);
+    opacity: 0;
     overflow: hidden;
     pointer-events: none;
     position: absolute;
@@ -127,12 +128,13 @@ body {
     width: 100%;
 
     &.active {
-      opacity: 1; filter: alpha(opacity=100);
+      display: block\9; // IE8 hack
+      opacity: 1;
       overflow: visible;
       pointer-events: all;
       position: relative;
       top: 0;
-      z-index: 1;
+      z-index: 20;
     }
 
     // Module on a main page
